Fjerner persistering av XML. Persisterer IDer. Prod config.
