# src/main/kotlin/no/nav/trekkapi/innmelding/TrekkInnmeldingRoutes.kt
@@ -1,16 +1,13 @@
 package no.nav.trekkapi.innmelding
 
-import io.ktor.http.ContentType
 import io.ktor.http.HttpHeaders
 import io.ktor.http.HttpStatusCode
 import io.ktor.server.plugins.NotFoundException
-import io.ktor.server.request.acceptItems
 import io.ktor.server.request.receiveText
 import io.ktor.server.response.header
 import io.ktor.server.response.respond
 import io.ktor.server.response.respondText
 import io.ktor.server.routing.Route
-import io.ktor.server.routing.RoutingRequest
 import io.ktor.server.routing.get
 import io.ktor.server.routing.post
 import no.nav.trekkapi.auth.orgNrFromTokenValidationContext
@@ -20,7 +17,6 @@ import no.nav.trekkapi.persistence.table.MessageStatusEnum
 import no.nav.trekkapi.plugin.UnauthorizedException
 import no.nav.trekkapi.plugin.ValidationException
 import java.io.InputStream
-import java.util.Base64
 import kotlin.io.bufferedReader
 import kotlin.io.readText
 import kotlin.use
@@ -31,7 +27,6 @@ fun Route.innmeldingRoutes(trekkInnmeldingService: TrekkInnmeldingService) {
         val orgnr = orgNrFromTokenValidationContext() ?: throw UnauthorizedException()
 
         val innmeldingXml = call.receiveText()
-        log.debug("Received trekkopplysning with body: $innmeldingXml")
         innmeldingXml.validateInnmeldingXML()
         val id = trekkInnmeldingService.register(orgnr, innmeldingXml)
         log.info("Videresendt trekkopplysningsmelding for orgnr: $orgnr, med ny id: $id")
@@ -48,23 +43,13 @@ fun Route.innmeldingRoutes(trekkInnmeldingService: TrekkInnmeldingService) {
         val status =
             trekkInnmeldingService.getStatus(orgnr, id)
                 ?: throw NotFoundException("No message found with the given ID")
-        log.info("Returnerer status $status for trekkopplysningsmelding med orgnr: $orgnr, id: $id")
+        log.info("Returnerer status ${status.status} for trekkopplysningsmelding med orgnr: $orgnr, id: $id")
         if (status.status == MessageStatusEnum.PENDING) {
             call.response.header(HttpHeaders.RetryAfter, "10")
         }
-        if (call.request.acceptsXml() && status.responseXml != null) {
-            call.respondText(
-                Base64.getDecoder().decode(status.responseXml).toString(Charsets.UTF_8),
-                ContentType.Application.Xml,
-                HttpStatusCode.OK,
-            )
-        } else {
-            call.respond(HttpStatusCode.OK, status)
-        }
+        call.respond(HttpStatusCode.OK, status)
     }
 }
-
-fun RoutingRequest.acceptsXml(): Boolean = acceptItems().any { it.value == ContentType.Application.Xml.toString() }
 
 fun String.validateInnmeldingXML() =
     runCatching { this.unmarshalMsgHead() }
@@ -76,7 +61,7 @@ fun Route.testRoutes(trekkInnmeldingService: TrekkInnmeldingService) {
         log.debug("TEST-Innrapportering kalt")
 
         val orgnr = "123456789"
-        // Vil bli lagret i DB og lagt på MQ
+        // Blir lagt på MQ.
 
         val inputStream: InputStream? = this::class.java.getResourceAsStream("/testbody.xml")
         val body = inputStream?.bufferedReader(Charsets.UTF_8)?.use { it.readText() } ?: ""
@@ -88,10 +73,9 @@ fun Route.testRoutes(trekkInnmeldingService: TrekkInnmeldingService) {
     }
 
     post("/test/innrapportering") {
-        log.debug("TEST-Innrapportering kalt med body")
+        log.debug("TEST-Innrapportering kalt")
         val orgnr = "974761076"
         val innmeldingXml = call.receiveText()
-        log.debug("Received trekkopplysning with body: $innmeldingXml")
         innmeldingXml.validateInnmeldingXML()
         val id = trekkInnmeldingService.register(orgnr, innmeldingXml)
         log.info("Videresendt trekkopplysningsmelding for orgnr: $orgnr, med ny id: $id")
@@ -107,7 +91,7 @@ fun Route.testRoutes(trekkInnmeldingService: TrekkInnmeldingService) {
         val orgnr = "974761076"
         val status = trekkInnmeldingService.getStatus(orgnr, id)
         if (status != null) {
-            log.info("Returnerer status $status for trekkopplysningsmelding med orgnr: $orgnr, id: $id")
+            log.info("Returnerer status ${status.status} for trekkopplysningsmelding med orgnr: $orgnr, id: $id")
             call.respond(HttpStatusCode.OK, status)
         } else {
             log.warn("Finnes ingen status for trekkopplysningsmelding med orgnr: $orgnr, id: $id")
